<resources>
    <string name="app_name">U你记</string>
    <string name="month">月份</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="balance">结余</string>
    <string name="amount">金额</string>
    <string name="tab_mine">我的</string>
    <string name="tab_chart">统计</string>
    <string name="tab_detail">明细</string>
    <string name="text_exit">再按一次退出程序</string>
    <string name="noti">亲，你还没有收支信息哦.....</string>
    <string name="notice">亲，该记账了哦.....</string>
    <string name="app_slogon">记录生活，记录你</string>
    <string name="author_name">李鑫</string>
    <string name="author_dept">14计算机科学与技术</string>
    <string name="author_number">14104337</string>
    <string name="hint_author">作者</string>
    <string name="hint_number">学号</string>
    <string name="hint_dept">所属专业</string>
    <string name="about_us">关于我们</string>
    <string name="excel_export">Excel导出</string>
    <string name="common_question">常见问题</string>
    <string name="add_category">新增类别</string>
    <string name="modify_category">修改类别</string>
    <string name="modify_succeed">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="save_succeed">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="input_category_name">请填写类别名称</string>
    <string name="add_succeed">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="lack_amount">结余金额不足</string>
    <string name="input_amount">请输入金额</string>
    <string name="current_month">本月</string>
    <string name="today">今天</string>
    <string name="current_week">本周</string>
    <string name="input_user">请输入用户名和密码</string>
    <string name="error_user_login">用户不存在或密码错误</string>
    <string name="edit_name">编辑昵称</string>
    <string name="input_username">请填写用户名</string>
    <string name="query_fail">查询失败</string>
    <string name="update_user_fail">更新用户名失败</string>
    <string name="update_user_succeed">更新用户名成功</string>
    <string name="user_exist">用户名已存在</string>
    <string name="modify_password">修改密码</string>
    <string name="record_accout">记账</string>
    <string name="verify_fail">验证失败</string>
    <string name="regiter_succeed">注册成功</string>
    <string name="input_full_info">请填写完整信息</string>
    <string name="username_exist">该用户名已被占用</string>
    <string name="email_exist">该邮箱已注册</string>
    <string name="person_info">我的资料</string>
    <string name="question">问题：</string>
    <string name="answer">答案：</string>
    <string name="question_hint">请输入你的密保问题</string>
    <string name="answer_hint">请输入你的答案</string>
    <string name="save">保存</string>
    <string name="year_analize">年度统计</string>
    <string name="catgory_analize">分类统计</string>
    <string name="more">更多</string>
    <string name="click_date">点击选择时间</string>
    <string name="person_center">个人中心</string>
    <string name="export_data">Excel导出</string>
    <string name="onekey_share">一键分享</string>
    <string name="init">初始化</string>
    <string name="record">记一笔</string>
    <string name="month_income">本月收入</string>
    <string name="month_expense">本月支出</string>
    <string name="month_remain">本月结余</string>
    <string name="zero">0.00</string>
    <string name="diffirence">差额</string>
    <string name="common">一般</string>
    <string name="note">备注</string>

    <string name="text_copyright">Copyright @2018-2023 Lixin All Rights Reserved</string>
    <string name="share_to">分享到</string>
</resources>
