<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.lixin.account.ucost.activity.AboutActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@mipmap/about_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_slogon"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:layout_marginTop="50dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/question"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_problem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:maxLines="2"
                android:gravity="right|center_vertical"
                android:hint="@string/question_hint"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/answer"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_answer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:maxLines="2"
                android:gravity="right|center_vertical"
                android:hint="@string/answer_hint"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_data"
        style="@style/btn_normal_style"
        android:text="@string/save"
        android:textSize="20dp" />

</LinearLayout>
