<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.lixin.account.ucost.activity.AboutActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@mipmap/about_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_slogon"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:layout_marginTop="50dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/icon_date_left"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:paddingBottom="2dp"
                android:paddingRight="8dp"
                android:paddingTop="2dp"
                android:src="@mipmap/baobiao_zuo"/>

            <TextView
                android:id="@+id/label_expense_date_chart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_date"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/icon_date_right"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:paddingBottom="2dp"
                android:paddingLeft="8dp"
                android:paddingTop="2dp"
                android:src="@mipmap/baobiao_you"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_excel_data"
        style="@style/btn_normal_style"
        android:text="@string/excel_export"
        android:textSize="20dp" />

</LinearLayout>
