<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lixin.account.ucost.activity.ItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/color_line_cl4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/diffirence"
            android:textColor="@color/actionbar_text_default"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/label_show_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="100.00"
            android:textColor="@color/actionbar_text_default"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/label_show_income"
                style="@style/text_show_label"
                tools:text="12.09" />

            <View
                android:layout_width="0.6dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/label_show_expense"
                style="@style/text_show_label"
                tools:text="-112.09" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_show_income"
            style="@style/btn_top_style"
            android:background="@drawable/btn_orange_normal"
            android:text="@string/income"/>

        <Button
            android:id="@+id/btn_show_expense"
            style="@style/btn_top_style"
            android:background="@drawable/btn_orange_pressed"
            android:text="@string/expense"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/show_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/show_fragment1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
